# mlops

./: CMakeList  Dockerfile  Dockerfile.fast  Makefile  READme.md  bindings.cpp  myalgo_package.whl  pyproject.toml  simple_test.py  test_docker.py  test_myalgo.py
src/: GrayScale.cpp  GrayScale.h
