[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.10.0",
    "cmake>=3.18",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "myalgo"
version = "0.1.0"
authors = [
    {name = "MLOps Student", email = "student@example.com"}
]
description = "Simple image processing with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[tool.scikit-build]
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release"
]